--- a/hi-hi project/hi-hi project.vcxproj
+++ b/hi-hi project/hi-hi project.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="hi-hi project.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="compare.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
